--- a/SF Salaries Exercise.ipynb
+++ b/SF Salaries Exercise.ipynb
@@ -16,7 +16,7 @@
    "source": [
     "# SF Salaries Exercise \n",
     "\n",
-    "Welcome to a quick exercise for you to practice your pandas skills! We will be using the [SF Salaries Dataset](https://www.kaggle.com/kaggle/sf-salaries) from Kaggle! Just follow along and complete the tasks outlined in bold below. The tasks will get harder and harder as you go along."
+    "Welcome to a quick exercise to practice your pandas skills! We will be using the [SF Salaries Dataset](https://www.kaggle.com/kaggle/sf-salaries) from Kaggle! Just follow along and complete the tasks outlined in bold below. The tasks will get harder and harder as you go along."
    ]
   },
   {
